app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: 398299019522.dkr.ecr.us-east-1.amazonaws.com/node-app:latest 
        ports:
        - containerPort: 3000
